# cmakeprogram

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  hello.cpp
math/: CMakeLists.txt  Makefile  cmake_install.cmake  math.cpp
math/include/: math.h
math/src/: CMakeLists.txt  Makefile  cmake_install.cmake  math.cpp
math/test/: CMakeLists.txt  Makefile  cmake_install.cmake  testmath  testmath.cpp
test/: CMakeLists.txt  Makefile  cmake_install.cmake  rapidjson  rapidjsontest.cpp  test.cpp
